add standard object

--- a/javascript基础/g_iterable.html
+++ b/javascript基础/g_iterable.html
@@ -30,7 +30,7 @@
       // console.log(x);
       // }
     }
-    //for in在循环数组是会有缺陷 -->使用forif便利Array是没有任何问题的
+    //for in在循环数组是会有缺陷 -->使用forof便利Array是没有任何问题的
     function forin() {
       var arr1 = [1, 2, 3];
       arr1.name = 'zhangsan';
