--- a/javascript标准对象/a_typeof.html
+++ b/javascript标准对象/a_typeof.html
@@ -51,6 +51,7 @@
                             //判断每个变量是否存在
                             console.log(typeof xxx=='undefined');
                             console.log('---------------------------------');
+                            // console.log(typeof xxx=='string');
                             console.log((true).toString());
                             //任何数据类型都有toString() 除了null,undefined这两种类型
                             //number类型有个例外
