2017-11-29 js高级教程3/4章

--- a/javascript标准对象/h_object.html
+++ b/javascript标准对象/h_object.html
@@ -11,6 +11,11 @@
       console.log(Student.prototype.constructor===Student);
       // Object.getPrototypeOf(xiaoming)  返回对象的原型
     }
+    function methodName (arguments) {
+      // body...
+      // var arr=new Array();
+      // arr.filt
+    }
     func1();
   </script>
 </head>
