add js第七章 函数表达式

--- a/javascript第七章函数表达式/b_settimeout.html
+++ b/javascript第七章函数表达式/b_settimeout.html
@@ -16,9 +16,10 @@
         console.log(document.location);
       }
       function func3 () {
-        location.assign('http://www.baidu.com');
+        // location.assign('http://www.baidu.com');
         // window.location='http://www.baidu.com';
         // location.href='http://www.baidu.com';
+
       }
       func3();
     </script>
